plugins {
    id 'java'
    id 'maven-publish'
}

group = 'io.github.togar2'
version = '1.0'

java.sourceCompatibility = 21
java.targetCompatibility = 21
compileJava.options.encoding = 'UTF-8'

java {
    withJavadocJar()
    withSourcesJar()
}

dependencies {
    compileOnly 'net.minestom:minestom-snapshots:f1d5940855'
    testImplementation 'net.minestom:minestom-snapshots:f1d5940855'
    //testImplementation 'com.github.TogAr2:MinestomFluids:b237b13a4b'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}
